# graphite

./: .env.example  .gitignore  .pre-commit-config.yaml  404.html  CLAUDE.md  CNAME  Document.md  LICENSE  README.md  index.html  logging_events.json  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yaml  docs.yml  jekyll-gh-pages.yml
assets/: overall-design.excalidraw  workflow.html
docs/: CODEBASE_REVIEW.md  mkdocs.yml  pyproject.toml
docs/docs/: index.md
docs/docs/getting-started/: features.md  installation.md  quickstart.md
docs/docs/guide/: configuring-event-store.md  configuring-integration-with-arize.md  configuring-integration-with-opentelemetry.md  connecting-to-an-mcp-server.md  creating-a-simple-workflow.md  debugging-with-grafi-dev.md  getting-started-with-assistants.md
docs/docs/stylesheets/: custom.css
docs/docs/user-guide/: architecture.md  assistant.md  builder-pattern.md  command.md  containers.md  conventional-rules.md  event-driven-workflow.md  event-interfaces.md  executor.md  invoke-decorators.md  models.md  node.md  runtime.md  topics.md  workflow-components.md
docs/docs/user-guide/events/: event_graph.md  event_store.md  events.md
docs/docs/user-guide/tools/: function-call.md  function.md  llm.md  ollama.md  openai.md  tool.md  tools.md
docs/docs/user-guide/topics/: input_topics.md  output_topics.md  subscription_expression.md  topic.md  topic_base.md  topic_event_cache.md
docs/plans/: ENG-256-logging-exception-handler-plan.md
docs/site/: 404.html  index.html
docs/site/getting-started/features/: index.html
docs/site/getting-started/installation/: index.html
docs/site/getting-started/quickstart/: index.html
docs/site/search/: search_index.json
docs/site/user-guide/architecture/: index.html
docs/site/user-guide/assistant/: index.html
docs/site/user-guide/command/: index.html
docs/site/user-guide/conventional-rules/: index.html
docs/site/user-guide/event-driven-workflow/: index.html
docs/site/user-guide/executor/: index.html
docs/site/user-guide/models/: index.html
docs/site/user-guide/node/: index.html
docs/site/user-guide/tools/function-call/: index.html
docs/site/user-guide/tools/ollama/: index.html
docs/site/user-guide/tools/openai/: index.html
docs/site/user-guide/tools/tools/: index.html
docs/site/user-guide/topics/: index.html
examples/: run_all.py
examples/embedding_assistant/: simple_embedding_retrieval_assistant.py  simple_embedding_retrieval_assistant_async_example.py  simple_embedding_retrieval_assistant_example.py
examples/event_store_postgres/: simple_llm_assistant_postgres_integration.py
examples/function_assistant/: simple_function_llm_assistant.py  simple_function_llm_assistant_example.py
examples/function_call_assistant/: multi_functions_call_assistant.py  multi_functions_call_assistant_async_example.py  multi_functions_call_assistant_example.py  simple_claude_function_call_assistant.py  simple_claude_function_call_assistant_example.py  simple_deepseek_function_call_assistant.py  simple_deepseek_function_call_assistant_example.py  simple_function_call_assistant.py  simple_function_call_assistant_agent_async_example.py  simple_function_call_assistant_agent_example.py  simple_function_call_assistant_async_example.py  simple_function_call_assistant_duckduckgo_example.py  simple_function_call_assistant_duckduckgo_example_local.py  simple_function_call_assistant_example.py  simple_function_call_assistant_google_search_example.py  simple_function_call_assistant_mcp_example.py  simple_function_call_assistant_mcp_example_local.py  simple_function_call_assistant_multi_functions_example.py  simple_function_call_assistant_no_func_call_async_example.py  simple_function_call_assistant_no_func_call_example.py  simple_function_call_assistant_tavily_example.py  simple_gemini_function_call_assistant.py  simple_gemini_function_call_assistant_example.py  simple_ollama_function_call_assistant.py  simple_ollama_function_call_assistant_async_example.py  simple_ollama_function_call_assistant_example.py  simple_openrouter_function_call_assistant.py  simple_openrouter_function_call_assistant_example.py
examples/hith_assistant/: kyc_assistant.py  kyc_assistant_example.py  simple_hitl_assistant.py  (+2 more)
grafi/api/: decorators.py
search/: search_index.json
stylesheets/: custom.css
tests/: conftest.py
tests_integration/: run_all.py
(+447 files in other folders)
