[project]
name = "grafi"
version = "0.0.34"
description = "Grafi - a flexible, event-driven framework that enables the creation of domain-specific AI agents through composable agentic workflows."
authors = [{name = "Craig Li", email = "craig@binome.dev"}]
license = {text = "Mozilla Public License Version 2.0"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.13.4",
    "openai>=2.42.0",
    "docstring-parser>=0.18.0",
    "openinference-instrumentation-openai>=0.1.52",
    "opentelemetry-sdk>=1.42.1",
    "opentelemetry-exporter-otlp-proto-grpc>=1.42.1",
    "loguru>=0.7.3",
    "anyio>=4.14.0",
    "cloudpickle>=3.1.2",
]

[dependency-groups]
dev = [
    "anthropic>=0.109.2",
    "black>=26.5.1",
    "chromadb>=1.5.9",
    "duckduckgo-search>=8.1.1",
    "fastmcp>=3.4.2",
    "google-genai>=2.8.0",
    "googlesearch-python>=1.3.0",
    "h11>=0.16.0",
    "llama-index-core>=0.14.22",
    "llama-index-embeddings-openai>=0.6.0",
    "llama-index-llms-openai>=0.7.9",
    "markdown>=3.10.2",
    "mcp>=1.28.0",
    "mypy>=2.1.0",
    "ollama>=0.6.2",
    "pre-commit>=4.6.0",
    "psycopg2-binary>=2.9.12",
    "asyncpg>=0.31.0",
    "pycountry>=26.2.16",
    "pytest>=9.1.0",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.17",
    "sqlalchemy>=2.0.51",
    "tavily-python>=0.7.26",
]
docs = [
    "mkdoc>=0.1",
]

[tool.ruff]
lint.select = [ "E", "F", "I", "TID251" ]
lint.ignore = [ "E501" ]
line-length = 88
indent-width = 4

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = false
docstring-code-line-length = "dynamic"

[tool.ruff.lint.flake8-tidy-imports.banned-api]
"typing.TypedDict".msg = "Use typing_extensions.TypedDict instead."

[tool.mypy]
# https://mypy.readthedocs.io/en/stable/config_file.html
disallow_untyped_defs = true
explicit_package_bases = true
warn_no_return = false
warn_unused_ignores = true
warn_redundant_casts = true
allow_redefinition = true
disable_error_code = "typeddict-item, return-value, override, has-type"

[[tool.mypy.overrides]]
module = "tavily.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "llama_index.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "googlesearch.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "jsonpickle.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "cloudpickle.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

[tool.coverage.run]
source = ["grafi"]
branch = true
omit = ["tests/*", "tests_integration/*"]

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "\\.\\.\\.",
]

[tool.pytest-watcher]
now = true
delay = 0.1
patterns = ["*.py"]


[tool.flake8]
max-line-length = 88
ignore = [
    "E203",
    "E501",
    "W503",
    "E701",
    "E704",
    "ANN002",
    "ANN003",
    "ANN101",
    "ANN102",
    "ANN204",
    "ANN401",
    "DUO109",
]
per-file-ignores = "**/__init__.py:F401"
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    "venv",
    ".venv"
]

[tool.black]
target-version = ["py311"]

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88
force_single_line = true



[tool.hatch.build.targets.wheel]
packages = ["grafi"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
